rust_ex1_grade
-----------------------
 ex1.rs
-----------------------
	bank.rs ------------- 00/10
	madlib.rs ----------- 00/15

error: struct literal body without path
  --> src/madlib.rs:12:23
   |
12 |       pub fn new() -> Self {
   |  __________________________^
13 | |         name: String::new(),
14 | |         adjective: String::new(),
15 | |         verb: String::new(),
16 | |         noun: String::new(),
17 | |         adverb: String::new()
18 | |     }
   | |_____^
   |
help: you might have forgotten to add the struct literal inside the block
   |
12 ~     pub fn new() -> Self { SomeStruct {
13 |         name: String::new(),
 ...
17 |         adverb: String::new()
18 ~     } }
   |

error[E0433]: failed to resolve: use of undeclared crate or module `io`
  --> src/madlib.rs:41:13
   |
41 |             io::stdin().read_line(&mut input).expect("Failed to read line");
   |             ^^ use of undeclared crate or module `io`

error[E0433]: failed to resolve: use of undeclared crate or module `io`
  --> src/madlib.rs:46:13
   |
46 |             io::stdin().read_line(&mut input).expect("Failed to read line");
   |             ^^ use of undeclared crate or module `io`

error[E0433]: failed to resolve: use of undeclared crate or module `io`
  --> src/madlib.rs:51:13
   |
51 |             io::stdin().read_line(&mut input).expect("Failed to read line");
   |             ^^ use of undeclared crate or module `io`

error[E0433]: failed to resolve: use of undeclared crate or module `io`
  --> src/madlib.rs:56:13
   |
56 |             io::stdin().read_line(&mut input).expect("Failed to read line");
   |             ^^ use of undeclared crate or module `io`


   |

  shape.rs  ----------- 00/20

eerror[E0433]: failed to resolve: could not find `Circle` in `shape`
  --> src/main.rs:55:17
   |
55 |     let c = shape::Circle::new(5.0, '^');
   |                    ^^^^^^ could not find `Circle` in `shape`

error[E0433]: failed to resolve: could not find `Circle` in `shape`
  --> src/main.rs:59:18
   |
59 |     let c2 = shape::Circle::new(7.0, '!');
   |                     ^^^^^^ could not find `Circle` in `shape`

error[E0433]: failed to resolve: could not find `Circle` in `shape`
  --> src/main.rs:63:18
   |
63 |     let c3 = shape::Circle::new(21.0, '*');
   |                     ^^^^^^ could not find `Circle` in `shape`

error[E0433]: failed to resolve: could not find `Triangle` in `shape`
  --> src/main.rs:68:17
   |
68 |     let t = shape::Triangle::new(5, '#');
   |                    ^^^^^^^^ could not find `Triangle` in `shape`

error[E0433]: failed to resolve: could not find `Triangle` in `shape`
  --> src/main.rs:72:18
   |
72 |     let t2 = shape::Triangle::new(6, '?');
   |                     ^^^^^^^^ could not find `Triangle` in `shape`

error[E0405]: cannot find trait `Display` in this scope
  --> src/shape.rs:57:6
   |
57 | impl Display for Rect {
   |      ^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
3  | use core::fmt::Display;
   |
3  | use std::fmt::Display;
   |

error[E0412]: cannot find type `Formatter` in this scope
  --> src/shape.rs:58:24
   |
58 |     fn fmt(&self, f: &mut Formatter<'_>) -> Result {
   |                           ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
3  | use core::fmt::Formatter;
   |
3  | use std::fmt::Formatter;rror[E0433]: failed to resolve: could not find `Circle` in `shape`
  --> src/main.rs:55:17
   |
55 |     let c = shape::Circle::new(5.0, '^');
   |                    ^^^^^^ could not find `Circle` in `shape`

error[E0433]: failed to resolve: could not find `Circle` in `shape`
  --> src/main.rs:59:18
   |
59 |     let c2 = shape::Circle::new(7.0, '!');
   |                     ^^^^^^ could not find `Circle` in `shape`

error[E0433]: failed to resolve: could not find `Circle` in `shape`
  --> src/main.rs:63:18
   |
63 |     let c3 = shape::Circle::new(21.0, '*');
   |                     ^^^^^^ could not find `Circle` in `shape`

error[E0433]: failed to resolve: could not find `Triangle` in `shape`
  --> src/main.rs:68:17
   |
68 |     let t = shape::Triangle::new(5, '#');
   |                    ^^^^^^^^ could not find `Triangle` in `shape`

error[E0433]: failed to resolve: could not find `Triangle` in `shape`
  --> src/main.rs:72:18
   |
72 |     let t2 = shape::Triangle::new(6, '?');
   |                     ^^^^^^^^ could not find `Triangle` in `shape`

error[E0405]: cannot find trait `Display` in this scope
  --> src/shape.rs:57:6
   |
57 | impl Display for Rect {
   |      ^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
3  | use core::fmt::Display;
   |
3  | use std::fmt::Display;
   |

error[E0412]: cannot find type `Formatter` in this scope
  --> src/shape.rs:58:24
   |
58 |     fn fmt(&self, f: &mut Formatter<'_>) -> Result {
   |                           ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
3  | use core::fmt::Formatter;
   |
3  | use std::fmt::Formatter;

  mine_sweeper -------- 00/30

-----------------------
total ----------- 00/60  

